<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

   <com.facebook.drawee.view.SimpleDraweeView
       android:layout_marginTop="40dp"
       android:layout_width="200dp"
       android:layout_height="200dp"
       fresco:placeholderImage="@drawable/icon"
       fresco:actualImageScaleType="centerInside"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/register_username"
        android:layout_width="260dp"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/register_hint"
        android:textColorHint="@color/divider"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/blue"
        android:background="@drawable/round"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/register_btn"
        android:textColor="@color/blue"
        android:background="@drawable/round"/>

    <Button
        android:id="@+id/to_login_btn"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/to_login"
        android:textColor="@color/blue"
        android:background="@drawable/round"/>

</LinearLayout>